Very basic code generation

--- a/llvm_code_generation1/makefile
+++ b/llvm_code_generation1/makefile
@@ -3,10 +3,12 @@ default:
 	rm -f Scanner.hs
 	alex Scanner.x
 	happy Newl.y
-	ghc -o newl Scanner.hs TypeNames.hs TypeChecking.hs Newl.hs
+	ghc --make -optl -w -o newl Scanner.hs Util.hs TypeNames.hs TypeChecking.hs CodeGen.hs Newl.hs
 
 clean:
 	rm -f *.hs
 	rm -f *.hi
 	rm -f *.o
 	rm -f newl
+LLVM: 
+	ghc --make -Wall -optl -w -o TestLLVM TestLLVM.hs Util.hs
